# choretle

./: choretle.code-workspace
android/: settings.gradle
android/app/: BUCK
android/app/src/debug/java/com/choretle/: ReactNativeFlipper.java
android/app/src/main/java/com/choretle/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/guardian/: main.rs  mod.rs
backend/src/overseer/: default.config.json  main.rs  mod.rs
backend/src/overseer/persistence/: mod.rs  mongo.rs
backend/src/pioneer/: default.config.json  main.rs  mod.rs
frontend/: App.tsx  app.json
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/choretle.xcodeproj/xcshareddata/xcschemes/: choretle.xcscheme
frontend/ios/choretle/Base.lproj/: LaunchScreen.xib
ios/: Podfile
ios/choretle/: Info.plist
ios/choretle.xcodeproj/: project.pbxproj
